# wpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSES.md  Makefile  NOTICE  README.md  hello.c  hello.html  info.c  test.c  test_env.c  test_zlib.c  wpp
LICENSES/: SQTP-LICENSE
buildins/: hello.c  hello.html
buildins/include/: float.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdnoreturn.h  tgmath.h
buildins/lib/sqtp/: sqtp.fetch.js  sqtp.xhr.callback.js  sqtp.xhr.promise.js
docs/: ARCHITECTURE.md  BUILDINS.md  BUILDINS_HYBRID_SEARCH.md  QUICKSTART.md
docs/design/: ARCHITECTURE.md
docs/sqtp/: 00-OVERVIEW.md  01-SELECT.md  02-INSERT.md  03-UPDATE.md  04-UPSERT.md  05-RESET.md  06-DELETE.md  07-SCHEMA.md  08-TRANSACTIONS.md
include/: common.h
include/wpp/: wpp.h
lib/sqtp/: CALLBACK_VS_PROMISE.md  README.md  sqtp.fetch.example.html  sqtp.fetch.js  sqtp.test.html  sqtp.xhr.callback.example.html  sqtp.xhr.callback.js  sqtp.xhr.promise.example.html  sqtp.xhr.promise.js
src/: buildins.c  buildins.h  common.c  http_cgi_c.c  http_sqtp.c  httpd.c  httpd.h  main.c  tcc_evn.c  tcc_evn.h  vfile.c  vfile.h
src/buildins/: sysroot.c  sysroot.h
tools/: make_buildins.sh
